# SimpleSQL

./: README.md  pyproject.toml  setup.py
src/: __init__.py  base.py
